# torcs-car-setup-editor

./: BugFixes.txt  CMakeLists.txt  Copia de Makefile.win.txt  Makefile  Makefile.win  README.md  calcParmamsABSG.cpp  cardata.h  cardatadef.h  command_line.cpp  complile_tcse_linux.txt  engine.cpp  export-xml.cpp  fileBrowser.cpp  gears.cpp  graphic.cpp  help-window.cpp  import-xml.cpp  install.sh  loadEngine.cpp  main.cpp  mainAC3dloader.cpp  open-car-data.cpp  portability.cpp  portability.h  read-dir.cpp  save-car-data.cpp  tcse  torcs-car-setup-editor  torcs-car-setup-editor.dev  torcs-car-setup-editor_private.h  torcs-car-setup-editor_private.rc  torcs-car-setup-editor_private.res  tracks.cpp  warningWindow.cpp
ac3dLoader/: ac3d.cpp  ac3d.h  car_c.rgb  cp_d.rgb  mainAC3dloader.cpp  render.cpp  test.ac  test_original.ac  texture.cpp  vte-h-1.rgb  vte-h-2.rgb  vte_1.rgb  vte_2.rgb  vte_3.rgb
car-setups/clkdtm/: clkdtm.txt  clkdtm_e-track-1.txt
car-setups/formula-torcs/: formula-torcs.txt  formula-torcs_e-track-1.txt  formula-torcs_la_pobla.txt  formula-torcs_track2-montmelo.txt  formula-torcs_track4-monaco.txt  formula-torcs_track5-.txt  formula-torcs_turkey.txt
data/: autorInfo.txt  carsList.txt  dirversList.txt  enginesCV.txt  tracksDirt.txt  tracksGprix.txt  tracksOval.txt  tracksRoad.txt
data/help_list/: frontWing.txt  gears.txt  readme.txt  steer.txt  suspension.txt
documentation/: estilos.css  torcs_car_setup_editor.html
